# DS7331_Projects

./: Clustering-MNIST.ipynb  EDA_Help.ipynb  Lab02.ipynb  Lab03.ipynb  MiniLab.ipynb  README.md  pyproject.toml
.ipynb_checkpoints/: Lab01-checkpoint.ipynb  Lab02-checkpoint.ipynb
Case-Study-7-final/: Sager_CS6.html  Sager_CS7.html  Sager_CS7.qmd  Sager_CS7.qmd.otter.py  appendix.lua
Case-Study-7-final/data/: read.txt
Lab01/: GettingStarted  Lab01.ipynb
