[tool.poetry]
name = "ds7331-projects"
version = "0.1.0"
description = ""
authors = ["NickSager <121263610+NickSager@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
asttokens = "2.4.1"
contourpy = "1.2.1"
cycler = "0.12.1"
decorator = "5.1.1"
executing = "2.0.1"
fonttools = "4.51.0"
ipython = "8.24.0"
jedi = "0.19.1"
joblib = "1.4.2"
kiwisolver = "1.4.5"
matplotlib = "3.8.4"
matplotlib-inline = "0.1.7"
numpy = "*"
packaging = "24.0"
pandas = "2.2.2"
parso = "0.8.4"
pexpect = "4.9.0"
pillow = "10.3.0"
prompt-toolkit = "3.0.43"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pygments = "2.18.0"
pyparsing = "3.1.2"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
scikit-learn = "1.4.2"
scipy = "1.13.0"
seaborn = "0.13.2"
six = "1.16.0"
stack-data = "0.6.3"
threadpoolctl = "3.5.0"
traitlets = "5.14.3"
tzdata = "2024.1"
wcwidth = "0.2.13"
jupyter = "^1.0.0"
jupyter-cache = "^1.0.0"
chardet = "^5.2.0"
beautifulsoup4 = "^4.12.3"
xgboost = "^2.0.3"
tensorflow = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
